# connect4

./: Cargo.toml  README.md  benchmark_results.txt
benches/: solver_benchmark.rs
src/: connect.rs  lib.rs  main.rs
src/connect/: Readme.md  board.rs  connect.rs  solver.rs  test_win_checker.rs
tests/: solver_bench.rs  solver_test.rs
tests/benchmark_positions/: Test_L3_R1
