[package]
name = "connect4"
version = "0.1.0"
authors = ["Troels Dalsgaard Hoffmeyer <Troels.d.hoffmeyer@gmail.com>"]
edition = "2021"

[lib]
name = "connect4"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/bin/game.rs"

[[bench]]
name = "solver_benchmark"
harness = false

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
priority-queue = "1.2.1"

[dependencies.serde_with]
version = "1.3.1"

[dev-dependencies]
criterion = "0.3"